[package]
name = "naia-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.19", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"